2008-11-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_jitter_buffer_sink_parse_caps), (gst_rtp_jitter_buffer_chain):
	Also configure the next expected output seqnum when we get a seqnum-base
	on the caps.

2008-11-10  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/app/gstappsink.c:
	* gst-libs/gst/app/gstappsrc.c:
	* gst/h264parse/gsth264parse.c:
	 Wim, you're a bad boy. You don't want people to contact you or what?

2008-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/filter/gstiir.c:
	  Fix name tag.

2008-11-07  David Schleef  <ds@schleef.org>

	patch by: Thiago Sousa Santos <thiagossantos@gmail.com>

	* configure.ac:
	* gst/qtmux/Makefile.am:
	* gst/qtmux/atoms.c:
	* gst/qtmux/atoms.h:
	* gst/qtmux/descriptors.c:
	* gst/qtmux/descriptors.h:
	* gst/qtmux/fourcc.h:
	* gst/qtmux/ftypcc.h:
	* gst/qtmux/gstqtmux.c:
	* gst/qtmux/gstqtmux.h:
	* gst/qtmux/gstqtmuxmap.c:
	* gst/qtmux/gstqtmuxmap.h:
	* gst/qtmux/properties.c:
	* gst/qtmux/properties.h:
	  Copy qtmux from revision 148 of the gst-qtmux repository.
	  Fixes #550280.

2008-11-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/app/gstappsrc.c: (gst_app_src_class_init),
	(gst_app_src_init), (gst_app_src_set_property),
	(gst_app_src_get_property), (gst_app_src_push_buffer):
	* gst-libs/gst/app/gstappsrc.h:
	Add is-live property.
	Add some more docs.

2008-11-06  Thijs Vermeir  <thijsvermeir@gmail.com>

	* configure.ac:
	* gst/librfb/Makefile.am:
	* gst/librfb/gstrfbsrc.c:
	Fix basic navigation events

2008-11-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/deinterlace2/gstdeinterlace2.c:
	(gst_deinterlace2_class_init), (gst_deinterlace2_init),
	(gst_deinterlace2_set_property), (gst_deinterlace2_get_property):
	Bring properties into this century.

2008-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/dvb/gstdvbsrc.c:
	Set filters in PAUSED or PLAYING.
